1. update dialogs 2. fix item search

--- a/src/assets/scripts/json/langs/enUS/ui.json
+++ b/src/assets/scripts/json/langs/enUS/ui.json
@@ -88,6 +88,7 @@
     "set":                "Set",
     "reset":              "Reset",
     "search":             "Search",
+    "inputKeyword":       "Input Keyword",
     "list":               "List",
     "requireCondition":   "Required Conditions",
     "candidateBundle":    "Candidate Bundles",
