--- a/src/assets/scripts/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/json/langs/zhTW/ui.json
@@ -88,6 +88,7 @@
     "set":                "套裝",
     "reset":              "重置",
     "search":             "搜尋",
+    "inputKeyword":       "輸入關鍵字",
     "list":               "列表",
     "requireCondition":   "需求條件",
     "candidateBundle":    "備選組合",
