--- a/src/assets/scripts/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/json/langs/zhTW/ui.json
@@ -89,6 +89,7 @@
     "reset":              "重置",
     "search":             "搜尋",
     "inputKeyword":       "輸入關鍵字",
+    "inputName":          "輸入配裝名稱",
     "list":               "列表",
     "requireCondition":   "需求條件",
     "candidateBundle":    "備選組合",
