1. add lang selector 2. update change log

--- a/src/assets/scripts/json/langs/enUS/ui.json
+++ b/src/assets/scripts/json/langs/enUS/ui.json
@@ -90,6 +90,8 @@
     "search":             "Search",
     "inputKeyword":       "Input Keyword",
     "inputName":          "Input Name",
+    "exportBundle":       "Export Bundle",
+    "showChangelog":      "Show Changelog",
     "list":               "List",
     "requireCondition":   "Required Conditions",
     "candidateBundle":    "Candidate Bundles",
