1. update contant 2. finish ui translate

--- a/src/assets/scripts/json/langs/enUS/ui.json
+++ b/src/assets/scripts/json/langs/enUS/ui.json
@@ -1,100 +1,107 @@
 {
-    "title":              "Monster Hunter: World - Calculator",
-    "skillLevelZero":     "This skill will not include in candidate bundles",
-    "name":               "Name",
-    "description":        "Description",
-    "extraInfo":          "Extra Info",
-    "rawAttack":          "Raw Attack",
-    "rawCriticalAttack":  "Raw Critical Attack",
-    "rawEV":              "Raw Expected Value",
-    "elementAttack":      "Element Attack",
-    "elementEV":          "Element Expected Value",
-    "totalEV":            "Total Expected Value",
-    "bundle":             "Bundle",
-    "level":              "Level",
-    "series":             "Series",
-    "rare":               "Rare",
-    "general":            "General",
-    "health":             "Health",
-    "stamina":            "Stamina",
-    "property":           "Properties",
-    "attackProperty":     "Attack Properties",
-    "defenseProperty":    "Defense Properties",
-    "attack":             "Attack",
-    "elderseal":          "Elderseal",
-    "defense":            "Defense",
-    "sharpness":          "Sharpness",
-    "criticalRate":       "Critical Rate",
-    "criticalMultiple":   "Critical Multiple",
-    "element":            "Element",
-    "attackElement":      "Attack Element",
-    "statusElement":      "Status Element",
-    "enhance":            "Enhance",
-    "slot":               "Slot",
-    "remainingSlot":      "Remaining Slot",
-    "resistance":         "Resistance",
-    "set":                "Set",
-    "size":               "Size",
-    "low":                "Low",
-    "medium":             "Medium",
-    "high":               "High",
-    "fire":               "Fire",
-    "water":              "Water",
-    "thunder":            "Thunder",
-    "ice":                "Ice",
-    "dragon":             "Dragon",
-    "poison":             "Poison",
-    "paralysis":          "Paralysis",
-    "sleep":              "Sleep",
-    "blast":              "Blast",
-    "weapon":             "Weapon",
-    "helm":               "Helm",
-    "chest":              "Chest",
-    "arm":                "Arm",
-    "waist":              "Waist",
-    "leg":                "Leg",
-    "charm":              "Charm",
-    "greatSword":         "Great Sword",
-    "longSword":          "Long Sword",
-    "swordAndShield":     "Sword And Shield",
-    "dualBlades":         "Dual Blades",
-    "hammer":             "Hammer",
-    "huntingHorn":        "Hunting Horn",
-    "lance":              "Lance",
-    "gunlance":           "Gunlance",
-    "switchAxe":          "Switch Axe",
-    "chargeBlade":        "Charge Blade",
-    "insectGlaive":       "Insect Glaive",
-    "lightBowgun":        "Light Bowgun",
-    "heavyBowgun":        "Heavy Bowgun",
-    "bow":                "Bow",
-    "active":             "Active",
-    "deactive":           "Deactive",
-    "include":            "Include",
-    "exclude":            "Exclude",
-    "unlock":             "Unlock",
-    "lock":               "Lock",
-    "equip":              "Equip",
-    "remove":             "Remove",
-    "add":                "Add",
-    "close":              "Close",
-    "select":             "Select",
-    "save":               "Save",
-    "clean":              "Clean",
-    "up":                 "Up",
-    "down":               "Down",
-    "skill":              "Skill",
-    "jewel":              "Jewel",
-    "set":                "Set",
-    "reset":              "Reset",
-    "search":             "Search",
-    "inputKeyword":       "Input Keyword",
-    "inputName":          "Input Name",
-    "exportBundle":       "Export Bundle",
-    "showChangelog":      "Show Changelog",
-    "list":               "List",
-    "requireCondition":   "Required Conditions",
-    "candidateBundle":    "Candidate Bundles",
-    "equipBundle":        "Equipped Bundle",
-    "status":             "Status"
+    "title":                "Monster Hunter: World - Calculator",
+    "skillLevelZero":       "This skill will not include in candidate bundles",
+    "searchResult1":        "Search time %s s, and display ",
+    "searchResult2":        " / %s results.",
+    "every":                "Every",
+    "rawAttackEV":          "Points Raw Attack EV",
+    "criticalRateEV":       "Points Critical Rate EV",
+    "criticalMultipleEV":   "Points Critical Multiple EV",
+    "elementAttackEV":      "Points Element Attack EV",
+    "name":                 "Name",
+    "description":          "Description",
+    "extraInfo":            "Extra Info",
+    "rawAttack":            "Raw Attack",
+    "rawCriticalAttack":    "Raw Critical Attack",
+    "rawEV":                "Raw Expected Value",
+    "elementAttack":        "Element Attack",
+    "elementEV":            "Element Expected Value",
+    "totalEV":              "Total Expected Value",
+    "bundle":               "Bundle",
+    "level":                "Level",
+    "series":               "Series",
+    "rare":                 "Rare",
+    "general":              "General",
+    "health":               "Health",
+    "stamina":              "Stamina",
+    "property":             "Properties",
+    "attackProperty":       "Attack Properties",
+    "defenseProperty":      "Defense Properties",
+    "attack":               "Attack",
+    "elderseal":            "Elderseal",
+    "defense":              "Defense",
+    "sharpness":            "Sharpness",
+    "criticalRate":         "Critical Rate",
+    "criticalMultiple":     "Critical Multiple",
+    "element":              "Element",
+    "attackElement":        "Attack Element",
+    "statusElement":        "Status Element",
+    "enhance":              "Enhance",
+    "slot":                 "Slot",
+    "remainingSlot":        "Remaining Slot",
+    "resistance":           "Resistance",
+    "set":                  "Set",
+    "size":                 "Size",
+    "low":                  "Low",
+    "medium":               "Medium",
+    "high":                 "High",
+    "fire":                 "Fire",
+    "water":                "Water",
+    "thunder":              "Thunder",
+    "ice":                  "Ice",
+    "dragon":               "Dragon",
+    "poison":               "Poison",
+    "paralysis":            "Paralysis",
+    "sleep":                "Sleep",
+    "blast":                "Blast",
+    "weapon":               "Weapon",
+    "helm":                 "Helm",
+    "chest":                "Chest",
+    "arm":                  "Arm",
+    "waist":                "Waist",
+    "leg":                  "Leg",
+    "charm":                "Charm",
+    "greatSword":           "Great Sword",
+    "longSword":            "Long Sword",
+    "swordAndShield":       "Sword And Shield",
+    "dualBlades":           "Dual Blades",
+    "hammer":               "Hammer",
+    "huntingHorn":          "Hunting Horn",
+    "lance":                "Lance",
+    "gunlance":             "Gunlance",
+    "switchAxe":            "Switch Axe",
+    "chargeBlade":          "Charge Blade",
+    "insectGlaive":         "Insect Glaive",
+    "lightBowgun":          "Light Bowgun",
+    "heavyBowgun":          "Heavy Bowgun",
+    "bow":                  "Bow",
+    "active":               "Active",
+    "deactive":             "Deactive",
+    "include":              "Include",
+    "exclude":              "Exclude",
+    "unlock":               "Unlock",
+    "lock":                 "Lock",
+    "equip":                "Equip",
+    "remove":               "Remove",
+    "add":                  "Add",
+    "close":                "Close",
+    "select":               "Select",
+    "save":                 "Save",
+    "clean":                "Clean",
+    "up":                   "Up",
+    "down":                 "Down",
+    "skill":                "Skill",
+    "jewel":                "Jewel",
+    "set":                  "Set",
+    "reset":                "Reset",
+    "search":               "Search",
+    "inputKeyword":         "Input Keyword",
+    "inputName":            "Input Name",
+    "exportBundle":         "Export Bundle",
+    "showChangelog":        "Show Changelog",
+    "list":                 "List",
+    "requireCondition":     "Required Conditions",
+    "candidateBundle":      "Candidate Bundles",
+    "equipBundle":          "Equipped Bundle",
+    "status":               "Status"
 }
