1. update chnagelog 2. release

--- a/src/assets/scripts/json/langs/enUS/ui.json
+++ b/src/assets/scripts/json/langs/enUS/ui.json
@@ -103,5 +103,6 @@
     "requireCondition":     "Required Conditions",
     "candidateBundle":      "Candidate Bundles",
     "equipBundle":          "Equipped Bundle",
-    "status":               "Status"
+    "status":               "Status",
+    "changelog":            "Change Log"
 }
