1. update convert json script: add pure slot equips 2. fix fitting algorithm typo

--- a/src/assets/scripts/json/langs/enUS/dataset.json
+++ b/src/assets/scripts/json/langs/enUS/dataset.json
@@ -1,1 +1,258 @@
-{}
+{
+    "U3": "Slot-Bow [1]",
+    "Yq": "Slot",
+    "p7": "Slot-Bow [1][1]",
+    "5y": "Slot",
+    "Fg": "Slot-Bow [1][2]",
+    "sb": "Slot",
+    "r5": "Slot-Bow [2]",
+    "fj": "Slot",
+    "dq": "Slot-Bow [2][2]",
+    "nR": "Slot",
+    "2P": "Slot-Bow [3]",
+    "Kf": "Slot",
+    "fR": "Slot-Bow [3][3]",
+    "JL": "Slot",
+    "yU": "Slot-Charge Blade [1]",
+    "6O": "Slot",
+    "rW": "Slot-Charge Blade [1][1]",
+    "lo": "Slot",
+    "u6": "Slot-Charge Blade [1][2]",
+    "lM": "Slot",
+    "KL": "Slot-Charge Blade [2]",
+    "zi": "Slot",
+    "oU": "Slot-Charge Blade [2][2]",
+    "Lt": "Slot",
+    "CD": "Slot-Charge Blade [2][3]",
+    "w4": "Slot",
+    "Zh": "Slot-Charge Blade [3]",
+    "NN": "Slot",
+    "0U": "Slot-Charge Blade [3][3]",
+    "1A": "Slot",
+    "dv": "Slot-Dual Blades [1]",
+    "2B": "Slot",
+    "jM": "Slot-Dual Blades [1][1]",
+    "st": "Slot",
+    "Qi": "Slot-Dual Blades [1][2]",
+    "89": "Slot",
+    "Wb": "Slot-Dual Blades [2]",
+    "do": "Slot",
+    "IW": "Slot-Dual Blades [2][2]",
+    "gZ": "Slot",
+    "RF": "Slot-Dual Blades [3]",
+    "B0": "Slot",
+    "DH": "Slot-Dual Blades [3][3]",
+    "we": "Slot",
+    "ji": "Slot-Great Sword [1]",
+    "Za": "Slot",
+    "Yw": "Slot-Great Sword [1][1]",
+    "Tc": "Slot",
+    "Ow": "Slot-Great Sword [1][2]",
+    "3T": "Slot",
+    "6I": "Slot-Great Sword [2]",
+    "Z9": "Slot",
+    "9E": "Slot-Great Sword [2][2]",
+    "HL": "Slot",
+    "hP": "Slot-Great Sword [3]",
+    "2F": "Slot",
+    "Hl": "Slot-Great Sword [3][3]",
+    "wb": "Slot",
+    "bx": "Slot-Gunlance [1]",
+    "XY": "Slot",
+    "yr": "Slot-Gunlance [1][1]",
+    "F4": "Slot",
+    "aC": "Slot-Gunlance [1][3]",
+    "Lb": "Slot",
+    "0R": "Slot-Gunlance [2]",
+    "vD": "Slot",
+    "ER": "Slot-Gunlance [2][3]",
+    "Jp": "Slot",
+    "er": "Slot-Gunlance [3]",
+    "z8": "Slot",
+    "bh": "Slot-Gunlance [3][3]",
+    "UF": "Slot",
+    "OY": "Slot-Hammer [1]",
+    "eW": "Slot",
+    "3I": "Slot-Hammer [1][1]",
+    "ZB": "Slot",
+    "i3": "Slot-Hammer [1][2]",
+    "lx": "Slot",
+    "jO": "Slot-Hammer [2]",
+    "WY": "Slot",
+    "Nd": "Slot-Hammer [2][2]",
+    "R2": "Slot",
+    "1h": "Slot-Hammer [3]",
+    "tx": "Slot",
+    "ew": "Slot-Hammer [3][3]",
+    "Ah": "Slot",
+    "At": "Slot-Heavy Bowgun [1]",
+    "EQ": "Slot",
+    "gF": "Slot-Heavy Bowgun [1][1]",
+    "af": "Slot",
+    "T8": "Slot-Heavy Bowgun [1][2]",
+    "L9": "Slot",
+    "1Z": "Slot-Heavy Bowgun [1][3]",
+    "GU": "Slot",
+    "T0": "Slot-Heavy Bowgun [2]",
+    "O3": "Slot",
+    "25": "Slot-Heavy Bowgun [3]",
+    "u9": "Slot",
+    "la": "Slot-Heavy Bowgun [3][3]",
+    "60": "Slot",
+    "Fk": "Slot-Hunting Horn [1]",
+    "Be": "Slot",
+    "nq": "Slot-Hunting Horn [1][1]",
+    "Ku": "Slot",
+    "X3": "Slot-Hunting Horn [1][2]",
+    "1Q": "Slot",
+    "rR": "Slot-Hunting Horn [1][3]",
+    "hp": "Slot",
+    "b6": "Slot-Hunting Horn [2]",
+    "Oq": "Slot",
+    "E0": "Slot-Hunting Horn [2][2]",
+    "CB": "Slot",
+    "l2": "Slot-Hunting Horn [3]",
+    "SE": "Slot",
+    "3w": "Slot-Hunting Horn [3][3]",
+    "FF": "Slot",
+    "mE": "Slot-Insect Glaive [1]",
+    "N9": "Slot",
+    "vv": "Slot-Insect Glaive [1][1]",
+    "vx": "Slot",
+    "Px": "Slot-Insect Glaive [1][2]",
+    "Ww": "Slot",
+    "Jf": "Slot-Insect Glaive [1][3]",
+    "fd": "Slot",
+    "2x": "Slot-Insect Glaive [2]",
+    "2S": "Slot",
+    "wy": "Slot-Insect Glaive [2][2]",
+    "SA": "Slot",
+    "SK": "Slot-Insect Glaive [3]",
+    "Rp": "Slot",
+    "v0": "Slot-Insect Glaive [3][3]",
+    "KF": "Slot",
+    "jQ": "Slot-Lance [1]",
+    "t2": "Slot",
+    "QE": "Slot-Lance [1][1]",
+    "yN": "Slot",
+    "w6": "Slot-Lance [1][2]",
+    "Z5": "Slot",
+    "ym": "Slot-Lance [2]",
+    "QL": "Slot",
+    "po": "Slot-Lance [2][2]",
+    "9p": "Slot",
+    "5K": "Slot-Lance [3]",
+    "3c": "Slot",
+    "PU": "Slot-Lance [3][3]",
+    "Tv": "Slot",
+    "W5": "Slot-Light Bowgun [1]",
+    "dP": "Slot",
+    "TC": "Slot-Light Bowgun [1][1]",
+    "rK": "Slot",
+    "Ga": "Slot-Light Bowgun [1][3]",
+    "V1": "Slot",
+    "fP": "Slot-Light Bowgun [2]",
+    "B5": "Slot",
+    "nx": "Slot-Light Bowgun [2][2]",
+    "1w": "Slot",
+    "Q1": "Slot-Light Bowgun [2][3]",
+    "pN": "Slot",
+    "Xa": "Slot-Light Bowgun [3]",
+    "1L": "Slot",
+    "IA": "Slot-Light Bowgun [3][3]",
+    "r6": "Slot",
+    "4t": "Slot-Long Sword [1]",
+    "EW": "Slot",
+    "5P": "Slot-Long Sword [1][1]",
+    "Eo": "Slot",
+    "iQ": "Slot-Long Sword [1][3]",
+    "m1": "Slot",
+    "bA": "Slot-Long Sword [2]",
+    "r7": "Slot",
+    "Z8": "Slot-Long Sword [2][2]",
+    "Zz": "Slot",
+    "3B": "Slot-Long Sword [3]",
+    "9c": "Slot",
+    "PH": "Slot-Long Sword [3][3]",
+    "o2": "Slot",
+    "lk": "Slot-Switch Axe [1]",
+    "hE": "Slot",
+    "mk": "Slot-Switch Axe [1][1]",
+    "B8": "Slot",
+    "9K": "Slot-Switch Axe [1][2]",
+    "1S": "Slot",
+    "q1": "Slot-Switch Axe [2]",
+    "Fp": "Slot",
+    "ka": "Slot-Switch Axe [2][2]",
+    "Vm": "Slot",
+    "Dy": "Slot-Switch Axe [2][3]",
+    "om": "Slot",
+    "ce": "Slot-Switch Axe [3]",
+    "nl": "Slot",
+    "3R": "Slot-Switch Axe [3][3]",
+    "h5": "Slot",
+    "b7": "Slot-Sword And Shield [1]",
+    "OW": "Slot",
+    "Yj": "Slot-Sword And Shield [1][1]",
+    "ZR": "Slot",
+    "Rm": "Slot-Sword And Shield [1][2]",
+    "Pd": "Slot",
+    "pU": "Slot-Sword And Shield [1][3]",
+    "0K": "Slot",
+    "jn": "Slot-Sword And Shield [2]",
+    "pJ": "Slot",
+    "Qd": "Slot-Sword And Shield [2][3]",
+    "yI": "Slot",
+    "ha": "Slot-Sword And Shield [3]",
+    "Wj": "Slot",
+    "Zo": "Slot-Sword And Shield [3][3]",
+    "sr": "Slot",
+    "xL": "Slot",
+    "kP": "Slot-Arm [1]",
+    "8x": "Slot-Arm [1][1]",
+    "dc": "Slot-Arm [1][1][1]",
+    "OG": "Slot-Arm [1][2]",
+    "Ok": "Slot-Arm [1][2][2]",
+    "Uy": "Slot-Arm [1][3]",
+    "2s": "Slot-Arm [2]",
+    "Fu": "Slot-Arm [2][2]",
+    "CN": "Slot-Arm [2][3]",
+    "Tr": "Slot-Arm [3]",
+    "Mg": "Slot-Chest [1]",
+    "b3": "Slot-Chest [1][1]",
+    "6e": "Slot-Chest [1][1][1]",
+    "H3": "Slot-Chest [1][2]",
+    "9R": "Slot-Chest [1][3]",
+    "vQ": "Slot-Chest [2]",
+    "Jm": "Slot-Chest [2][2]",
+    "e2": "Slot-Chest [3]",
+    "Dj": "Slot-Helm [1]",
+    "RA": "Slot-Helm [1][1]",
+    "Jn": "Slot-Helm [1][1][1]",
+    "T1": "Slot-Helm [1][1][3]",
+    "19": "Slot-Helm [1][2]",
+    "j3": "Slot-Helm [1][3]",
+    "lD": "Slot-Helm [2]",
+    "vb": "Slot-Helm [2][2]",
+    "FZ": "Slot-Helm [2][3]",
+    "q0": "Slot-Helm [3]",
+    "H0": "Slot-Leg [1]",
+    "uY": "Slot-Leg [1][1]",
+    "Wa": "Slot-Leg [1][1][2]",
+    "xA": "Slot-Leg [1][2]",
+    "Qf": "Slot-Leg [1][3]",
+    "fa": "Slot-Leg [2]",
+    "zf": "Slot-Leg [2][2]",
+    "Dl": "Slot-Leg [2][3]",
+    "9n": "Slot-Leg [3]",
+    "fo": "Slot-Waist [1]",
+    "wI": "Slot-Waist [1][1]",
+    "al": "Slot-Waist [1][1][1]",
+    "cj": "Slot-Waist [1][1][2]",
+    "QX": "Slot-Waist [1][2]",
+    "KA": "Slot-Waist [1][3]",
+    "Q3": "Slot-Waist [2]",
+    "9H": "Slot-Waist [2][2]",
+    "rx": "Slot-Waist [2][3]",
+    "va": "Slot-Waist [3]"
+}
