1. add weapons & armors 2. update changelog

--- a/src/assets/scripts/json/langs/enUS/dataset.json
+++ b/src/assets/scripts/json/langs/enUS/dataset.json
@@ -1,258 +1,262 @@
 {
-    "U3": "Slot-Bow [1]",
-    "Yq": "Slot",
-    "p7": "Slot-Bow [1][1]",
-    "5y": "Slot",
-    "Fg": "Slot-Bow [1][2]",
-    "sb": "Slot",
-    "r5": "Slot-Bow [2]",
+    "r5": "Slot-Bow [1]",
     "fj": "Slot",
-    "dq": "Slot-Bow [2][2]",
+    "dq": "Slot-Bow [1][1]",
     "nR": "Slot",
-    "2P": "Slot-Bow [3]",
+    "2P": "Slot-Bow [1][2]",
     "Kf": "Slot",
-    "fR": "Slot-Bow [3][3]",
+    "fR": "Slot-Bow [2]",
     "JL": "Slot",
-    "yU": "Slot-Charge Blade [1]",
+    "yU": "Slot-Bow [2][2]",
     "6O": "Slot",
-    "rW": "Slot-Charge Blade [1][1]",
+    "rW": "Slot-Bow [3]",
     "lo": "Slot",
-    "u6": "Slot-Charge Blade [1][2]",
+    "u6": "Slot-Bow [3][3]",
     "lM": "Slot",
-    "KL": "Slot-Charge Blade [2]",
+    "KL": "Slot-Charge Blade [1]",
     "zi": "Slot",
-    "oU": "Slot-Charge Blade [2][2]",
+    "oU": "Slot-Charge Blade [1][1]",
     "Lt": "Slot",
-    "CD": "Slot-Charge Blade [2][3]",
+    "CD": "Slot-Charge Blade [1][2]",
     "w4": "Slot",
-    "Zh": "Slot-Charge Blade [3]",
+    "Zh": "Slot-Charge Blade [2]",
     "NN": "Slot",
-    "0U": "Slot-Charge Blade [3][3]",
+    "0U": "Slot-Charge Blade [2][2]",
     "1A": "Slot",
-    "dv": "Slot-Dual Blades [1]",
+    "dv": "Slot-Charge Blade [2][3]",
     "2B": "Slot",
-    "jM": "Slot-Dual Blades [1][1]",
+    "jM": "Slot-Charge Blade [3]",
     "st": "Slot",
-    "Qi": "Slot-Dual Blades [1][2]",
+    "Qi": "Slot-Charge Blade [3][3]",
     "89": "Slot",
-    "Wb": "Slot-Dual Blades [2]",
+    "Wb": "Slot-Dual Blades [1]",
     "do": "Slot",
-    "IW": "Slot-Dual Blades [2][2]",
+    "IW": "Slot-Dual Blades [1][1]",
     "gZ": "Slot",
-    "RF": "Slot-Dual Blades [3]",
+    "RF": "Slot-Dual Blades [1][2]",
     "B0": "Slot",
-    "DH": "Slot-Dual Blades [3][3]",
+    "DH": "Slot-Dual Blades [2]",
     "we": "Slot",
-    "ji": "Slot-Great Sword [1]",
+    "ji": "Slot-Dual Blades [2][2]",
     "Za": "Slot",
-    "Yw": "Slot-Great Sword [1][1]",
+    "Yw": "Slot-Dual Blades [3]",
     "Tc": "Slot",
-    "Ow": "Slot-Great Sword [1][2]",
+    "Ow": "Slot-Dual Blades [3][3]",
     "3T": "Slot",
-    "6I": "Slot-Great Sword [2]",
+    "6I": "Slot-Great Sword [1]",
     "Z9": "Slot",
-    "9E": "Slot-Great Sword [2][2]",
+    "9E": "Slot-Great Sword [1][1]",
     "HL": "Slot",
-    "hP": "Slot-Great Sword [3]",
+    "hP": "Slot-Great Sword [1][2]",
     "2F": "Slot",
-    "Hl": "Slot-Great Sword [3][3]",
+    "Hl": "Slot-Great Sword [2]",
     "wb": "Slot",
-    "bx": "Slot-Gunlance [1]",
+    "bx": "Slot-Great Sword [2][2]",
     "XY": "Slot",
-    "yr": "Slot-Gunlance [1][1]",
+    "yr": "Slot-Great Sword [3]",
     "F4": "Slot",
-    "aC": "Slot-Gunlance [1][3]",
+    "aC": "Slot-Great Sword [3][3]",
     "Lb": "Slot",
-    "0R": "Slot-Gunlance [2]",
+    "0R": "Slot-Gunlance [1]",
     "vD": "Slot",
-    "ER": "Slot-Gunlance [2][3]",
+    "ER": "Slot-Gunlance [1][1]",
     "Jp": "Slot",
-    "er": "Slot-Gunlance [3]",
+    "er": "Slot-Gunlance [1][3]",
     "z8": "Slot",
-    "bh": "Slot-Gunlance [3][3]",
+    "bh": "Slot-Gunlance [2]",
     "UF": "Slot",
-    "OY": "Slot-Hammer [1]",
+    "OY": "Slot-Gunlance [2][3]",
     "eW": "Slot",
-    "3I": "Slot-Hammer [1][1]",
+    "3I": "Slot-Gunlance [3]",
     "ZB": "Slot",
-    "i3": "Slot-Hammer [1][2]",
+    "i3": "Slot-Gunlance [3][3]",
     "lx": "Slot",
-    "jO": "Slot-Hammer [2]",
+    "jO": "Slot-Hammer [1]",
     "WY": "Slot",
-    "Nd": "Slot-Hammer [2][2]",
+    "Nd": "Slot-Hammer [1][1]",
     "R2": "Slot",
-    "1h": "Slot-Hammer [3]",
+    "1h": "Slot-Hammer [1][2]",
     "tx": "Slot",
-    "ew": "Slot-Hammer [3][3]",
+    "ew": "Slot-Hammer [2]",
     "Ah": "Slot",
-    "At": "Slot-Heavy Bowgun [1]",
+    "At": "Slot-Hammer [2][2]",
     "EQ": "Slot",
-    "gF": "Slot-Heavy Bowgun [1][1]",
+    "gF": "Slot-Hammer [3]",
     "af": "Slot",
-    "T8": "Slot-Heavy Bowgun [1][2]",
+    "T8": "Slot-Hammer [3][3]",
     "L9": "Slot",
-    "1Z": "Slot-Heavy Bowgun [1][3]",
+    "1Z": "Slot-Heavy Bowgun [1]",
     "GU": "Slot",
-    "T0": "Slot-Heavy Bowgun [2]",
+    "T0": "Slot-Heavy Bowgun [1][1]",
     "O3": "Slot",
-    "25": "Slot-Heavy Bowgun [3]",
+    "25": "Slot-Heavy Bowgun [1][2]",
     "u9": "Slot",
-    "la": "Slot-Heavy Bowgun [3][3]",
+    "la": "Slot-Heavy Bowgun [1][3]",
     "60": "Slot",
-    "Fk": "Slot-Hunting Horn [1]",
+    "Fk": "Slot-Heavy Bowgun [2]",
     "Be": "Slot",
-    "nq": "Slot-Hunting Horn [1][1]",
+    "nq": "Slot-Heavy Bowgun [3]",
     "Ku": "Slot",
-    "X3": "Slot-Hunting Horn [1][2]",
+    "X3": "Slot-Heavy Bowgun [3][3]",
     "1Q": "Slot",
-    "rR": "Slot-Hunting Horn [1][3]",
+    "rR": "Slot-Hunting Horn [1]",
     "hp": "Slot",
-    "b6": "Slot-Hunting Horn [2]",
+    "b6": "Slot-Hunting Horn [1][1]",
     "Oq": "Slot",
-    "E0": "Slot-Hunting Horn [2][2]",
+    "E0": "Slot-Hunting Horn [1][2]",
     "CB": "Slot",
-    "l2": "Slot-Hunting Horn [3]",
+    "l2": "Slot-Hunting Horn [1][3]",
     "SE": "Slot",
-    "3w": "Slot-Hunting Horn [3][3]",
+    "3w": "Slot-Hunting Horn [2]",
     "FF": "Slot",
-    "mE": "Slot-Insect Glaive [1]",
+    "mE": "Slot-Hunting Horn [2][2]",
     "N9": "Slot",
-    "vv": "Slot-Insect Glaive [1][1]",
+    "vv": "Slot-Hunting Horn [3]",
     "vx": "Slot",
-    "Px": "Slot-Insect Glaive [1][2]",
+    "Px": "Slot-Hunting Horn [3][3]",
     "Ww": "Slot",
-    "Jf": "Slot-Insect Glaive [1][3]",
+    "Jf": "Slot-Insect Glaive [1]",
     "fd": "Slot",
-    "2x": "Slot-Insect Glaive [2]",
+    "2x": "Slot-Insect Glaive [1][1]",
     "2S": "Slot",
-    "wy": "Slot-Insect Glaive [2][2]",
+    "wy": "Slot-Insect Glaive [1][2]",
     "SA": "Slot",
-    "SK": "Slot-Insect Glaive [3]",
+    "SK": "Slot-Insect Glaive [1][3]",
     "Rp": "Slot",
-    "v0": "Slot-Insect Glaive [3][3]",
+    "v0": "Slot-Insect Glaive [2]",
     "KF": "Slot",
-    "jQ": "Slot-Lance [1]",
+    "jQ": "Slot-Insect Glaive [2][2]",
     "t2": "Slot",
-    "QE": "Slot-Lance [1][1]",
+    "QE": "Slot-Insect Glaive [3]",
     "yN": "Slot",
-    "w6": "Slot-Lance [1][2]",
+    "w6": "Slot-Insect Glaive [3][3]",
     "Z5": "Slot",
-    "ym": "Slot-Lance [2]",
+    "ym": "Slot-Lance [1]",
     "QL": "Slot",
-    "po": "Slot-Lance [2][2]",
+    "po": "Slot-Lance [1][1]",
     "9p": "Slot",
-    "5K": "Slot-Lance [3]",
+    "5K": "Slot-Lance [1][2]",
     "3c": "Slot",
-    "PU": "Slot-Lance [3][3]",
+    "PU": "Slot-Lance [2]",
     "Tv": "Slot",
-    "W5": "Slot-Light Bowgun [1]",
+    "W5": "Slot-Lance [2][2]",
     "dP": "Slot",
-    "TC": "Slot-Light Bowgun [1][1]",
+    "TC": "Slot-Lance [3]",
     "rK": "Slot",
-    "Ga": "Slot-Light Bowgun [1][3]",
+    "Ga": "Slot-Lance [3][3]",
     "V1": "Slot",
-    "fP": "Slot-Light Bowgun [2]",
+    "fP": "Slot-Light Bowgun [1]",
     "B5": "Slot",
-    "nx": "Slot-Light Bowgun [2][2]",
+    "nx": "Slot-Light Bowgun [1][1]",
     "1w": "Slot",
-    "Q1": "Slot-Light Bowgun [2][3]",
+    "Q1": "Slot-Light Bowgun [1][3]",
     "pN": "Slot",
-    "Xa": "Slot-Light Bowgun [3]",
+    "Xa": "Slot-Light Bowgun [2]",
     "1L": "Slot",
-    "IA": "Slot-Light Bowgun [3][3]",
+    "IA": "Slot-Light Bowgun [2][2]",
     "r6": "Slot",
-    "4t": "Slot-Long Sword [1]",
+    "4t": "Slot-Light Bowgun [2][3]",
     "EW": "Slot",
-    "5P": "Slot-Long Sword [1][1]",
+    "5P": "Slot-Light Bowgun [3]",
     "Eo": "Slot",
-    "iQ": "Slot-Long Sword [1][3]",
+    "iQ": "Slot-Light Bowgun [3][3]",
     "m1": "Slot",
-    "bA": "Slot-Long Sword [2]",
+    "bA": "Slot-Long Sword [1]",
     "r7": "Slot",
-    "Z8": "Slot-Long Sword [2][2]",
+    "Z8": "Slot-Long Sword [1][1]",
     "Zz": "Slot",
-    "3B": "Slot-Long Sword [3]",
+    "3B": "Slot-Long Sword [1][3]",
     "9c": "Slot",
-    "PH": "Slot-Long Sword [3][3]",
+    "PH": "Slot-Long Sword [2]",
     "o2": "Slot",
-    "lk": "Slot-Switch Axe [1]",
+    "lk": "Slot-Long Sword [2][2]",
     "hE": "Slot",
-    "mk": "Slot-Switch Axe [1][1]",
+    "mk": "Slot-Long Sword [3]",
     "B8": "Slot",
-    "9K": "Slot-Switch Axe [1][2]",
+    "9K": "Slot-Long Sword [3][3]",
     "1S": "Slot",
-    "q1": "Slot-Switch Axe [2]",
+    "q1": "Slot-Switch Axe [1]",
     "Fp": "Slot",
-    "ka": "Slot-Switch Axe [2][2]",
+    "ka": "Slot-Switch Axe [1][1]",
     "Vm": "Slot",
-    "Dy": "Slot-Switch Axe [2][3]",
+    "Dy": "Slot-Switch Axe [1][2]",
     "om": "Slot",
-    "ce": "Slot-Switch Axe [3]",
+    "ce": "Slot-Switch Axe [2]",
     "nl": "Slot",
-    "3R": "Slot-Switch Axe [3][3]",
+    "3R": "Slot-Switch Axe [2][2]",
     "h5": "Slot",
-    "b7": "Slot-Sword And Shield [1]",
+    "b7": "Slot-Switch Axe [2][3]",
     "OW": "Slot",
-    "Yj": "Slot-Sword And Shield [1][1]",
+    "Yj": "Slot-Switch Axe [3]",
     "ZR": "Slot",
-    "Rm": "Slot-Sword And Shield [1][2]",
+    "Rm": "Slot-Switch Axe [3][3]",
     "Pd": "Slot",
-    "pU": "Slot-Sword And Shield [1][3]",
+    "pU": "Slot-Sword And Shield [1]",
     "0K": "Slot",
-    "jn": "Slot-Sword And Shield [2]",
+    "jn": "Slot-Sword And Shield [1][1]",
     "pJ": "Slot",
-    "Qd": "Slot-Sword And Shield [2][3]",
+    "Qd": "Slot-Sword And Shield [1][2]",
     "yI": "Slot",
-    "ha": "Slot-Sword And Shield [3]",
+    "ha": "Slot-Sword And Shield [1][3]",
     "Wj": "Slot",
-    "Zo": "Slot-Sword And Shield [3][3]",
+    "Zo": "Slot-Sword And Shield [2]",
     "sr": "Slot",
-    "xL": "Slot",
-    "kP": "Slot-Arm [1]",
-    "8x": "Slot-Arm [1][1]",
-    "dc": "Slot-Arm [1][1][1]",
-    "OG": "Slot-Arm [1][2]",
-    "Ok": "Slot-Arm [1][2][2]",
-    "Uy": "Slot-Arm [1][3]",
-    "2s": "Slot-Arm [2]",
-    "Fu": "Slot-Arm [2][2]",
-    "CN": "Slot-Arm [2][3]",
-    "Tr": "Slot-Arm [3]",
-    "Mg": "Slot-Chest [1]",
-    "b3": "Slot-Chest [1][1]",
-    "6e": "Slot-Chest [1][1][1]",
-    "H3": "Slot-Chest [1][2]",
-    "9R": "Slot-Chest [1][3]",
-    "vQ": "Slot-Chest [2]",
-    "Jm": "Slot-Chest [2][2]",
-    "e2": "Slot-Chest [3]",
-    "Dj": "Slot-Helm [1]",
-    "RA": "Slot-Helm [1][1]",
-    "Jn": "Slot-Helm [1][1][1]",
-    "T1": "Slot-Helm [1][1][3]",
-    "19": "Slot-Helm [1][2]",
-    "j3": "Slot-Helm [1][3]",
-    "lD": "Slot-Helm [2]",
-    "vb": "Slot-Helm [2][2]",
-    "FZ": "Slot-Helm [2][3]",
-    "q0": "Slot-Helm [3]",
-    "H0": "Slot-Leg [1]",
-    "uY": "Slot-Leg [1][1]",
-    "Wa": "Slot-Leg [1][1][2]",
-    "xA": "Slot-Leg [1][2]",
-    "Qf": "Slot-Leg [1][3]",
-    "fa": "Slot-Leg [2]",
-    "zf": "Slot-Leg [2][2]",
-    "Dl": "Slot-Leg [2][3]",
-    "9n": "Slot-Leg [3]",
-    "fo": "Slot-Waist [1]",
-    "wI": "Slot-Waist [1][1]",
-    "al": "Slot-Waist [1][1][1]",
-    "cj": "Slot-Waist [1][1][2]",
-    "QX": "Slot-Waist [1][2]",
-    "KA": "Slot-Waist [1][3]",
-    "Q3": "Slot-Waist [2]",
-    "9H": "Slot-Waist [2][2]",
-    "rx": "Slot-Waist [2][3]",
-    "va": "Slot-Waist [3]"
+    "JY": "Slot-Sword And Shield [2][3]",
+    "Kv": "Slot",
+    "D3": "Slot-Sword And Shield [3]",
+    "bn": "Slot",
+    "H5": "Slot-Sword And Shield [3][3]",
+    "Lq": "Slot",
+    "b3": "Slot",
+    "6e": "Slot-Arm [1]",
+    "H3": "Slot-Arm [1][1]",
+    "9R": "Slot-Arm [1][1][1]",
+    "vQ": "Slot-Arm [1][1][3]",
+    "Jm": "Slot-Arm [1][2]",
+    "e2": "Slot-Arm [1][2][2]",
+    "Dj": "Slot-Arm [1][3]",
+    "RA": "Slot-Arm [2]",
+    "Jn": "Slot-Arm [2][2]",
+    "T1": "Slot-Arm [2][3]",
+    "19": "Slot-Arm [3]",
+    "j3": "Slot-Chest [1]",
+    "lD": "Slot-Chest [1][1]",
+    "vb": "Slot-Chest [1][1][1]",
+    "FZ": "Slot-Chest [1][1][3]",
+    "q0": "Slot-Chest [1][2]",
+    "H0": "Slot-Chest [1][3]",
+    "uY": "Slot-Chest [2]",
+    "Wa": "Slot-Chest [2][2]",
+    "xA": "Slot-Chest [3]",
+    "Qf": "Slot-Helm [1]",
+    "fa": "Slot-Helm [1][1]",
+    "zf": "Slot-Helm [1][1][1]",
+    "Dl": "Slot-Helm [1][1][3]",
+    "9n": "Slot-Helm [1][2]",
+    "fo": "Slot-Helm [1][3]",
+    "wI": "Slot-Helm [2]",
+    "al": "Slot-Helm [2][2]",
+    "cj": "Slot-Helm [2][3]",
+    "QX": "Slot-Helm [3]",
+    "KA": "Slot-Leg [1]",
+    "Q3": "Slot-Leg [1][1]",
+    "9H": "Slot-Leg [1][1][2]",
+    "rx": "Slot-Leg [1][1][3]",
+    "va": "Slot-Leg [1][2]",
+    "rE": "Slot-Leg [1][3]",
+    "dx": "Slot-Leg [2]",
+    "FS": "Slot-Leg [2][2]",
+    "8E": "Slot-Leg [2][3]",
+    "xz": "Slot-Leg [3]",
+    "zw": "Slot-Waist [1]",
+    "uF": "Slot-Waist [1][1]",
+    "nL": "Slot-Waist [1][1][1]",
+    "Ae": "Slot-Waist [1][1][2]",
+    "yi": "Slot-Waist [1][1][3]",
+    "JX": "Slot-Waist [1][2]",
+    "Td": "Slot-Waist [1][3]",
+    "bg": "Slot-Waist [2]",
+    "yM": "Slot-Waist [2][2]",
+    "Eh": "Slot-Waist [2][3]",
+    "OQ": "Slot-Waist [3]"
 }
